--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+
+html,body {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
